plugins {
    id 'java'
}

group 'uk.ac.hutton.germinate-importer'
version '4.8.8'

compileJava.options.encoding = 'UTF-8'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    maven {
        url 'https://nexus.geomatys.com/repository/geotoolkit/'
    }
    maven {
        url 'https://repo.osgeo.org/repository/release/'
    }
    maven {
        url 'https://maven.scijava.org/content/repositories/public/'
    }
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'lib', include: ['*.jar'])

    implementation 'cisd:jhdf5:19.04.1'
    implementation 'org.jooq:jooq:3.20.5'
    implementation 'com.google.code.gson:gson:2.10'
    implementation 'com.mysql:mysql-connector-j:8.2.0'
    implementation 'org.dhatim:fastexcel-reader:0.19.0'

    implementation 'javax.media:jai_core:1.1.3'
    implementation 'org.geotools:gt-shapefile:27.2'

    // Only needed for local debug
    implementation 'org.flywaydb:flyway-core:10.22.0'
    implementation 'org.flywaydb:flyway-mysql:10.22.0'

    // Dev dependencies
    implementation 'de.poiu.apron:apron:2.1.1'
}
